--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "dev": "parcel index.html",
     "build": "./node_modules/.bin/parcel build index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --silent",
+    "test:update": "jest --silent -u",
+    "test:watch": "jest --silent --watch",
+    "test:coverage": "jest --silent --coverage"
   },
   "keywords": [],
   "author": "",
@@ -26,10 +29,14 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
+    "jest": "^23.6.0",
     "parcel-bundler": "^1.11.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "react-test-renderer": "^16.7.0"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.6",
+    "@emotion/styled": "^10.0.6",
     "@reach/router": "^1.2.1",
     "petfinder-client": "0.0.3",
     "react": "^16.7.0",
