--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "@reach/router": "^1.2.1",
+    "http2": "^3.3.7",
     "petfinder-client": "0.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
