set up express router, configured react app for SSR

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format:check": "prettier --list-different \"src/**/*.{js,jsx,css,json}\"",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "dev": "parcel index.html",
-    "build": "./node_modules/.bin/parcel build index.html",
+    "build": "parcel build --public-url ./dist/ index.html",
+    "start": "npm run build && babel-node server.js",
     "test": "jest --silent",
     "test:update": "jest --silent -u",
     "test:watch": "jest --silent --watch",
@@ -38,6 +39,8 @@
     "@emotion/core": "^10.0.6",
     "@emotion/styled": "^10.0.6",
     "@reach/router": "^1.2.1",
+    "babel-cli": "^6.26.0",
+    "express": "^4.16.4",
     "http2": "^3.3.7",
     "petfinder-client": "0.0.3",
     "react": "^16.7.0",
